<resources>
    <string name="app_name">Chemistry</string>
    <string name="app_label">Chemistry</string>
    <string name="search_hint">Search formulas</string>
    <string name="title_activity_compound_results">Compound Results</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Chemistry</string>
    <string name="also_known_as">"Also known as: "</string>
    <string name="formula">"Formula: "</string>
    <string name="molar_mass">"Molar mass: "</string>
    <string name="unknown_compound">Not Listed/Unknown</string>
    <string name="compound_elements_header">Elements</string>
    <string name="help_text">"Chem: from Ac to Zr
        v1.0.0

        Alex Doan
        Daniel Kinney
        Robert Valladares
        John-Paul Steed
        Taylor Veith
        Victoria Rivas

        Tips to navigate:

        
        Unit Converter

        Choose the conversion type from the
        drop-down menu first
        Choose your from - to units first by pressing on
        the drop-down menus
        Enter the value of the unit to convert at the
        bottom and press "Calculate"
        Result is displayed under the "Calculate" button

        
        Compound Search

        Choose from compounds displayed or search
        from the bar at the top
        Can search via compound formula or compound
        name
        If searching by formula:
        * Search is case sensitive!
        * Don't forget parentheses if in the formula
        If searching by compound name:
        * Start typing in the compound name
        * Choose the compound from the list generated
        Choose a compound for conversion of grams to
        moles

        
        Elements

        Elements displayed in the list by the atomic
        number
        Search for elements at the top of the screen
        by name
        Choose an element for additional information
        and conversion from grams to moles

        
        Periodic Table

        Table will display in landscape - rotate your
        phone! Zoom in to the display as normal"
    </string>
    <string name="compoundsearchbuttontext">Compound Search</string>
    <string name="tablebuttontext">Periodic Table</string>
    <string name="helpbuttontext">Help</string>
    <string name="converterbuttontext">Unit Converter</string>
    <string name="elementsbuttontext">Elements</string>

    <string name="title_activity_mole">MoleActivity</string>
    <string name="splash_screen">Splash screen</string>
    <string name="contactbuttontext">Contact Us</string>
    <string name="send_button">Send</string>
    <string name="contactmessagehint">message</string>
    <string name="contactsubjecthint">subject</string>
    <string name="questionsuggestionbugprompt">Have a question, suggestion, or bug to report? Let us know here.</string>

    <string-array name="converstionTypes">
        <item>Area</item>
        <item>Density</item>
        <item>Length</item>
        <item>Mass</item>
        <item>Pressure</item>
        <item>Temperature</item>
        <item>Volume</item>
    </string-array>
    <string-array name="areaUnits">
        <item>Acre</item>
        <item>Hectare</item>
        <item>Sq Metre</item>
        <item>Sq Centimetre</item>
        <item>Sq Millimetre</item>
        <item>Sq Kilometre</item>
        <item>Sq Mile</item>
        <item>Sq Inch</item>
        <item>Sq Foot</item>
        <item>Sq Yard</item>
    </string-array>
    <string-array name="lengthUnits">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Picometre</item>
        <item>Nanometre</item>
        <item>Micrometre</item>
        <item>Millimetre</item>
        <item>Centimetre</item>
        <item>Decimetre</item>
        <item>Metre</item>
        <item>Kilometre</item>
        <item>Megametre</item>
        <item>Gigametre</item>
    </string-array>
    <string-array name="massUnits">
        <item>Ounce</item>
        <item>Pound</item>
        <item>Atomic Mass Unit/Dalton</item>
        <item>Gram</item>
        <item>Milligram</item>
        <item>Kilogram</item>
        <item>Metric Fuck Ton</item>
    </string-array>
    <string-array name="pressureUnits">
        <item>Atmosphere</item>
        <item>Torr</item>
        <item>Pascal</item>
        <item>Kilopascal</item>
        <item>Millimetre of Mercury</item>
        <item>Pounds per Sq Inch</item>
    </string-array>
    <string-array name="volumeUnits">
        <item>Cubic Metre</item>
        <item>Cubic Centimetre</item>
        <item>Cubic Millimetre</item>
        <item>Cubic Kilometre</item>
        <item>Litre</item>
        <item>Gallon</item>
        <item>Quart</item>
        <item>Cup</item>
        <item>Pint</item>
        <item>Cubic Feet</item>
        <item>Millilitre</item>
        <item>Kilolitre</item>
    </string-array>
    <string-array name="temperatureUnits">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
</resources>
