<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.ContactActivity">

    <TextView
        android:id="@+id/contactusprompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/questionsuggestionbugprompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/contactsubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactusprompt"
        android:layout_margin="5dp"
        android:background="#E3F2FD"
        android:gravity="center"
        android:hint="@string/contactsubjecthint" />

    <EditText
        android:id="@+id/contactmessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contactsubject"
        android:layout_margin="5dp"
        android:background="#E3F2FD"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contactmessagehint"
        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|textMultiLine"
        android:lines="10" />

    <Button
        android:id="@+id/contactsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/contactmessage"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="#2196F3"
        android:onClick="sendMessage"
        android:text="@string/send_button"
        android:textColor="#FFFFFF" />

</RelativeLayout>
